--- a/client/src/styles/Visa.css
+++ b/client/src/styles/Visa.css
@@ -2,6 +2,10 @@
     margin-top: 150px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    background-color: yellow;
+    height:600px;
+    margin:50px;
 }
 .info{
     max-width: 500px;
