--- a/client/src/styles/OneAccount.css
+++ b/client/src/styles/OneAccount.css
@@ -5,22 +5,24 @@
 }
 
 
-.OneAccount div:nth-of-type(1){
+.OneAccount>div:nth-of-type(1){
     background-color: red;
-    width: 55%;
+    width: 50%;
     margin: 40px;
 }
 
-.OneAccount div:nth-of-type(2){
-    width: 45%;
+.OneAccount>div:nth-of-type(2){
+    margin:30px;
+    width: 50%;
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto auto;
 }
 
-.OneAccount div:nth-of-type(2) div{
+.OneAccountFeatures{
     margin:20px;
-    width: 100%;
+    padding: 10px;
+    justify-content: center;
     background-color: blue;
     display: flex;
     flex-direction: column;
