--- a/client/src/styles/VerticalDiv.css
+++ b/client/src/styles/VerticalDiv.css
@@ -1,8 +1,24 @@
-.landing-page{
-    display: flex;
-    justify-content: space-between;
+
+#hero{
+    font-size: 7rem;
+    font-weight:900;
+    padding-left: 10px;
+    padding-top: 0px;
+    margin: 1px;
+    color: #ffffff;
 }
 
-.landing-page div{
-    
+#deets{
+    display: flex;
+    color: #ffffff;
+    font-size: 1rem;
+    line-height: 1rem;
+    font-weight: 500;
+    text-align: start;
+    margin: 1px;
 }
+
+#img{
+    margin:0.5rem 0;
+}
+
