--- a/client/src/styles/Paragraph.css
+++ b/client/src/styles/Paragraph.css
@@ -1,5 +1,5 @@
 #para{
-    background-color:red;
+    background-color:rgba(235, 0, 70, 1);;
     height:650px;
     display: flex;
     justify-content: center;
