--- a/client/src/styles/Visa.css
+++ b/client/src/styles/Visa.css
@@ -1,30 +1,62 @@
 .visa{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    background-color: yellow;
+    background-color: rgba(235, 0, 70, 1);
     height:600px;
 }
 .info{
-    max-width: 500px;
+    height: 100%;
+    width:50%;
     text-align: left;
-    background-color: red;
 }
+
+.info h2{
+    font-size: 3.25rem;
+    line-height: 1;
+    font-weight: 600;
+    color:white;
+}
+
+.info h2::before{
+    content: "Be";
+    color: black;
+}
+
+.info span{
+    color: white;
+    font-size: 1.25rem;
+    font-weight: 500;
+}
+
 .info ul{
     display: flex;
     padding: 0;
-    margin: 0;
+    height: 30%;
+    margin: 30px 0;
     justify-content: space-between;
-    background-color: blue;
     list-style-type: none;
+    color: white;
 }
-.info li{
-    max-width: 180px;
-    background-color: green;
-    display: flex;
-    margin-right: 80px;
-}
-.info p{
-    font-size: 10px;
 
+.info ul span{
+    font-size: 1rem;
+}
+
+.info ul p{
+    font-weight: 400;
+    line-height: 1.3;
+    font-size: 0.75rem;
+}
+
+.info li{
+    display: flex;
+    margin-right: 20px;
+    padding-top:10px;
+}
+
+.info img{
+    width:25px;
+    height: 25px;
+    margin: 10px;
 }
