--- a/client/src/styles/Fiat.css
+++ b/client/src/styles/Fiat.css
@@ -1,5 +1,5 @@
 .Fiat{
-    background-color: white;
+    background-color: transparent;
     display:flex;
     height:650px;
     padding: 0 60px;
