--- a/client/src/styles/LandingPage.css
+++ b/client/src/styles/LandingPage.css
@@ -1,7 +1,7 @@
 .landing-page{
-    height: 650px;
+    height: 100vh;
     display: flex;
-    background-color: rgba(235, 0, 70, 1);
+    background-color: transparent;
     width: 100%;
 }
 
