--- a/client/src/styles/OneAccount.css
+++ b/client/src/styles/OneAccount.css
@@ -1,7 +1,8 @@
 .OneAccount{
     display: flex;
     width: 100%;
-    background-color: white;
+    background-color: transparent;
+    height: 100vh;
 }
 
 
