--- a/client/src/styles/Paragraph.css
+++ b/client/src/styles/Paragraph.css
@@ -1,6 +1,6 @@
 #para{
-    background-color:rgba(235, 0, 70, 1);;
-    height:650px;
+    background-color:transparent;
+    height:100vh;
     display: flex;
     justify-content: center;
     align-items: center;
