--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -4,6 +4,10 @@ header{
     align-items: center;
     width:100%;
     background-color: rgba(235, 0, 70, 1) ;
+    position: sticky;
+    top: 0;
+    overflow: hidden;
+    z-index: 10;
 }
 
 header ul{
