--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.cdnfonts.com/css/br-hendrix');
+
+
 body {
   margin: 0;
+  margin-top: 7vh;
   padding: 0px  60px; 
-  font-family: 'Roboto', 'Oxygen',
+  font-family:'BR Hendrix', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -13,10 +17,18 @@ body {
 html{
   scroll-snap-type: y mandatory;
   scroll-padding-bottom: 30px;
+  scroll-padding-top: 40px;
 }
 
 .App>div{
   scroll-snap-align: center;
+  scroll-behavior: smooth;
   scroll-snap-stop: always;
 }
 
+
+@media(max-width:480px){
+  body{
+  padding:0 10px;
+}
+}
