--- a/client/src/styles/Fiat.css
+++ b/client/src/styles/Fiat.css
@@ -1,8 +1,11 @@
 .Fiat{
     background-color: transparent;
     display:flex;
-    height:650px;
+    height:100vh;
     padding: 0 60px;
+    background-image: url('../images/bg_licensed.svg');
+    background-position: 100% 120%;
+    background-repeat: no-repeat;
 }
 
 .con{
@@ -31,7 +34,10 @@
     align-items: start;
     width: 25%;
     text-align: start;
-    border-radius: 25px;
+    border-radius: 8px;
+    transition: background-color 0.4s, box-shadow 0.4s;
+    padding:1rem;
+    font-weight: 300;
 }
 
 .FiatComponents img{
@@ -42,9 +48,10 @@
 }
 
 .FiatComponents:hover{
-    box-shadow: 3px 3px 3px 3px gray;
-    transform:scale(1.04) ;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.256);
+    transform:scale(1.03) ;
     transition: 0.3s;
+    cursor: pointer;
 }
 
 .con-deets h1{
@@ -57,5 +64,5 @@
 .con-deets p{
     text-align: start;
     font-size: 1.25rem;
-    font-weight: 500;
+    font-weight: 300;
 }
