--- a/client/src/styles/LandingPage.css
+++ b/client/src/styles/LandingPage.css
@@ -1,8 +1,16 @@
+
+
 .landing-page{
+    opacity: 1;
     height: 100vh;
     display: flex;
     background-color: transparent;
+    background-image: url('../images/bg_hero.webp');
+    background-size: contain;
+    background-position: left center;
+    background-repeat: no-repeat;
     width: 100%;
+    inset: 60px;
 }
 
 .landing-page>div{
@@ -37,3 +45,29 @@
 .landing-page>div:nth-of-type(4){
     margin-right: 0px;
 }
+
+@media (max-width:480px){
+    .landing-page{
+    padding-top:50px;
+    flex-direction: column;
+    background-size: cover;
+    inset: 20px;
+    background-position: 100% center !important;
+    }
+
+    .landing-page img{
+        display: none;
+    }
+}
+
+@media (max-width: 992px) {
+    .landing-page{
+    grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (max-width: 1200px) {
+    .landing-page{
+        grid-template-columns: repeat(4, 1fr);
+    }
+    }
