--- a/client/src/styles/OneAccount.css
+++ b/client/src/styles/OneAccount.css
@@ -2,6 +2,11 @@
     display: flex;
     width: 100%;
     background-color: transparent;
+    background-image: url('../images/bg_one_account.webp');
+    background-size: contain;
+    background-position: left center;
+    background-repeat: no-repeat;
+    inset:60px;
     height: 100vh;
 }
 
@@ -40,7 +45,7 @@
 
 .OneAccountFeatures p:nth-child(3){
     font-size: 0.875rem;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.2;
  }
  
@@ -57,4 +62,43 @@
     padding-top: 5px;
     height: 32px;
     width: 60px;
+}
+
+@media(max-width:480px){
+    .OneAccount{
+        flex-direction: column;
+        background-image: none;
+    }
+
+    .OneAccount>div:nth-of-type(1){
+        font-size: 2rem;
+        text-align: start;
+        margin: 0px 25px;
+    }
+
+    .OneAccountFeatures{
+        padding: 0px;
+    }
+
+    .OneAccountFeatures p:nth-child(2){
+        font-weight: bolder; 
+        font-size: 1.1rem;
+        margin:0px;
+        text-align: start;
+     }
+
+    .OneAccountFeatures p:nth-child(3){
+        font-size: 0.875rem;
+        font-weight: 500;
+        line-height: 1.2;
+     }
+
+     .OneAccount>div:nth-of-type(2){
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 0.5rem;
+        margin: 0px;
+    }
+    
 }
