--- a/client/src/styles/Paragraph.css
+++ b/client/src/styles/Paragraph.css
@@ -19,3 +19,9 @@
     font-weight: bold;
     color: black
 }
+
+@media(max-width:480px){
+    #para p, #para span{
+    font-size: 2.15rem;
+    }
+}
