--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,13 +8,67 @@
 }
 
 .App{
-  transition: background-color 1s ease;
+  transition: background-color 0.5s ease;
+  width: 100%;
 }
+
 
 .color-red {
   background-color: rgba(235, 0, 70, 1);
+  padding: 0px;
+  margin: 0px;
 }
 
 .color-white {
   background-color: white;
+}
+
+.App div:nth-child(6) .pic{
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  width:50%;
+  background-image: url('./images/bg_own.webp');
+  background-size: contain;
+  background-position: left top;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  background-attachment: fixed;
+}
+
+.App div:nth-child(6) .info h2::before{
+  content: "Own";
+  color: black;
+}
+
+.App div:nth-child(6) .visa{
+  background-image: none;
+}
+
+@media(max-width:480px){
+  .App div:nth-child(6) .pic{
+    display: none;
+  }
+
+  .App div:nth-child(6) .info{
+    min-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url('./images/bg_own.webp');
+    background-size: cover;
+    background-position: -450px;
+    background-repeat: no-repeat;
+  }
+  
+  .App div:nth-child(6){
+    margin: 0px;
+    padding:0px;
+  }
+
+  .App div:nth-child(6) #res p{
+    display: block;
+}
+
 }
