--- a/client/src/styles/LandingPage.css
+++ b/client/src/styles/LandingPage.css
@@ -2,15 +2,23 @@
 
 .landing-page{
     opacity: 1;
-    height: 100vh;
+    height: 90vh;
     display: flex;
-    background-color: transparent;
     background-image: url('../images/bg_hero.webp');
     background-size: contain;
     background-position: left center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     width: 100%;
     inset: 60px;
+}
+
+#hero{
+    padding-bottom: 10px;
+}
+
+.landing-page div:nth-child(3){
+        padding-top: 10px;
 }
 
 .landing-page>div{
@@ -22,37 +30,20 @@
     width: 100%;
 }
 
-.landing-page>div:nth-of-type(1){
-   background-color: transparent;
-}
 
-.landing-page>div:nth-of-type(1) #deets{
-    padding-bottom:10px;
- }
  
-
-.landing-page>div:nth-of-type(2n) h1{
-    background-color: transparent;
-    line-height: 7.6rem;
-    height:134.4px;
-}
-
-.landing-page>div:nth-of-type(2n) #deets{
-    white-space: pre-line;
-    height:32px;
-}
-
-.landing-page>div:nth-of-type(4){
-    margin-right: 0px;
-}
-
-@media (max-width:480px){
+@media (max-width:680px){
     .landing-page{
-    padding-top:50px;
-    flex-direction: column;
+        padding-top: 180px;
+        display: block;
+        justify-content: center;
     background-size: cover;
-    inset: 20px;
     background-position: 100% center !important;
+    }
+
+    .landing-page>div{
+        width: fit-content;
+        height: fit-content;
     }
 
     .landing-page img{
@@ -68,6 +59,9 @@
 
 @media (max-width: 1200px) {
     .landing-page{
-        grid-template-columns: repeat(4, 1fr);
+       flex-direction: row;
+       justify-content: center;
+       background-size: cover;  
+    background-position: 100% center !important;
     }
     }
