--- a/client/src/styles/Visa.css
+++ b/client/src/styles/Visa.css
@@ -4,10 +4,11 @@
     align-items: start;
     background-color: transparent;
     background-image: url('../images/bg_be.08b8e2c2.png');
-    background-size: contain;
+    background-size: cover;
     background-position: left center;
     background-repeat: no-repeat;
-    height:100vh;
+    background-attachment: fixed;
+    height:90vh;
     padding: 70px;
 }
 .info{
@@ -49,7 +50,7 @@
 }
 
 .info ul p{
-    font-weight: 300;
+    font-weight: 500;
     line-height: 1.3;
     font-size: 0.75rem;
 }
@@ -79,14 +80,20 @@
 }
 
 @media(max-width:480px){
-    .visa{
-        flex-direction: column;
+    .visa {
+        margin-top: 200px;
+        flex-direction: row;
         align-items: center;
         justify-content: center;
         padding: 0px;
+        margin: 0px;
+        background-image: url('../images/bg_be.08b8e2c2.png');
         background-size: cover;
-        inset: 20px;
-        background-position: 100% center !important;
+        background-position: top; /* Positions the image at the top-right corner */
+        background-repeat: no-repeat; /* Prevents repeating */
+        width: 100%;
+        box-sizing: border-box;
+        z-index: 10;
     }
 
     .info h2{
@@ -94,7 +101,9 @@
     }
 
     .pic{
+        display: flex;
         margin: 0px;
+        height: 100%;
     }
 
     .info span{
@@ -103,8 +112,11 @@
     }
 
     .info{
-        height: 25%;
         width: 100%;
+        max-height: 100%;
+        margin: 0px;
+        padding: 0px;
+        position: relative; /* Optional */
     }
 
     #res{
@@ -113,5 +125,25 @@
 
     #res p{
         display: none;
+    }
+}
+
+@media (max-width: 1200px){
+    .visa{
+        justify-content: start;
+        align-items: start;
+        padding-right: 45px;
+        padding-left: 0px;
+        background-size: contain;
+        inset: 20px;
+        background-position: 100% center !important;
+    }
+
+    .info{
+        padding-left: 45px;
+    }
+
+    .info h2{
+        font-size: 2rem;
     }
 }
