--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -30,7 +30,7 @@ header ul a{
   color: white;
 }
 
-header ul li a span{
+.link{
   display: inline-block;
   padding-bottom:2px;
   background-image: linear-gradient(white 0 0);
@@ -55,4 +55,10 @@ header ul li a span:hover{
 #logo{
   font-weight: bolder;
   font-size: 1.8rem;
+}
+
+@media(max-width:480px){
+  header{
+   
+  }
 }
