--- a/client/src/styles/phones.css
+++ b/client/src/styles/phones.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     text-align: start;
-    height:650px;
+    height:90vh;
     align-items: start;
     padding:150px 20px 0px;
     margin-bottom: 0px;
@@ -64,4 +64,40 @@
     color: black;
     font-weight: 500;
     line-height: 1;
+}
+
+@media(max-width:480px){
+    .pic-holder{
+        width: 80%;
+    }
+
+    .phones{
+        flex-direction: column;
+    }
+
+    .phones h2{
+        font-size: 2.15rem;
+    }
+}
+
+@media (max-width: 1200px){
+    .phones{
+        flex-direction: column;
+        padding: 0px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .pic-holder{
+        padding: 0px;
+        height: auto;
+        padding-left: 25px;
+    }
+
+    .phones-info{
+        padding: 0px;
+        height: auto;
+        width: 90%;
+        text-align: start;
+    }
 }
