--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -39,3 +39,14 @@ footer{
 .rights span{
     font-family: 'Arial';
 }
+
+@media (max-width:480px){
+    .trademarks{
+       flex-direction: column; 
+    }
+
+    .purpose{
+        padding-top: 20px;
+        padding-left: 0px;
+    }
+}
