--- a/client/src/styles/OneAccount.css
+++ b/client/src/styles/OneAccount.css
@@ -1,6 +1,7 @@
 .OneAccount{
     display: flex;
     width: 100%;
+    height: 90vh;
     background-color: transparent;
     background-image: url('../images/bg_one_account.webp');
     background-size: contain;
@@ -70,6 +71,7 @@
     .OneAccount{
         flex-direction: column;
         background-image: none;
+        margin-bottom:200px;
     }
 
     .OneAccount>div:nth-of-type(1){
