--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 
 
 body {
-  margin: 0;
+  margin: 0px;
   padding: 0px 60px;
   font-family:'BR Hendrix', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,6 +11,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   /*uncomment this shi when ur done*/
   background-color:rgba(235, 0, 70, 1);
+  overflow-x: hidden;
 }
 
 html{
@@ -35,6 +36,7 @@ html{
   justify-content: center;
   width: 100%;
   overflow-x: hidden;
+  margin: 0px;
 }
 
 }
