--- a/client/src/styles/OneAccount.css
+++ b/client/src/styles/OneAccount.css
@@ -71,6 +71,7 @@
     .OneAccount{
         flex-direction: column;
         background-image: none;
+        height:100vh;
         margin-bottom:200px;
     }
 
